2009-xx-xx - release 0.8.0
        - ignore DEL files in file_open
        - drive mapper
        - EXOS V3 fastloader support
        - requires avr-libc 1.6.x

2008-10-02 - release 0.8.0pre1
        - Implement Dreamload emulation
        - RTC support
        - Dataflash support
        - Multi-file scratch
        - Copy command
        - Large buffer support
        - Final Cartridge 3 freezed file fastloader support
        - D71/D81 disk image support
        - parse FSINFO sector for faster FAT32 free space calculation
        - partial REL file support

2008-07-09 - release 0.7.3
        - Bugfix: Free buffers on error in M2I and D64
          (fixes "D64 size increases to 1.1M when its free space runs out")

2008-06-10 - release 0.7.2
        - Bugfix: rename doesn't corrupt files with hidden extensions anymore
        - Bugfix: RD works again
        - Bugfix: On uIEC the ATN ACK interrupt was never disabled
        - case-insensitive matching of FAT filenames

2008-06-05 - release 0.7.1
        - Bugfix: Mark sectors 18/0 and 18/1 as used during D64 format
        - Bugfix: Single-char dir patterns are directory numbers
        - Bugfix: Short N: on D64 should clean only the first dir sector
        - case-insensitive matching of FAT filenames
        - ask the AR6 to not use its fastloader/-saver

2008-05-02 - release 0.7.0
        - does not support the ATmega32 anymore
        - Match trailing part of names after * too
          + option to disable that
        - Multi-drive/partition support
        - Dual SD card support (some configurations)
        - Rename
        - transparent support for P/S/U/R00 files (read+create)
          + option to disable x00 writing
        - file-type suffix detection+generation
          + option to disable that
        - Final Cartridge III fast-load/save
        - Sleep mode
        - Extended swaplist navigation (next/prev/home)
        - extended version query