@@ -108,6 +108,8 @@ static const prog_uint8_t messages[] = {
     'D','R','I','V','E',4,1,'Y',
   EC(77),
     9,' ',8,10,
+  EC(78),
+    'B','U','F','F','E','R',' ','T','O','O',' ','S','M','A','L','L',
   EC(79),
     'I','M','A','G','E',' ',0,' ','I','N','V','A','L','I','D',
   EC(127)
