@@ -75,6 +75,7 @@ uint8_t set_ok_message(buffer_t *buf);
 #define ERROR_DOSVERSION         73
 #define ERROR_DRIVE_NOT_READY    74
 #define ERROR_PARTITION_ILLEGAL  77
+#define ERROR_BUFFER_TOO_SMALL   78
 #define ERROR_IMAGE_INVALID      79
 
 #endif
