@@ -35,5 +35,6 @@ DSTATUS sd_status(BYTE drv);
 DSTATUS sd_initialize(BYTE drv);
 DRESULT sd_read(BYTE drv, BYTE *buffer, DWORD sector, BYTE count);
 DRESULT sd_write(BYTE drv, const BYTE *buffer, DWORD sector, BYTE count);
+DRESULT sd_getinfo(BYTE drv, BYTE page, void *buffer);
 
 #endif
